[gd_scene load_steps=8 format=3 uid="uid://d00cyggfmj43n"]

[ext_resource type="PackedScene" uid="uid://ddwtfhud2pam6" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="1_ujmhc"]
[ext_resource type="Script" path="res://scenes/weapons/enemy_fine_laser/enemy_fine_laser.gd" id="1_wkqm6"]
[ext_resource type="AudioStream" uid="uid://c2yqmektrywo6" path="res://assets/audios/laser/sci-fi_computer_running_code_02.wav" id="3_17kof"]
[ext_resource type="Texture2D" uid="uid://c65i1xj25a8rb" path="res://assets/sprites/vfx/explosions/explosion-f.png" id="4_msahl"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_1yqjx"]
b = Vector2(0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6bd7p"]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ex5e7"]
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.5
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="EnemyFineLaser" type="Node2D"]
script = ExtResource("1_wkqm6")

[node name="LaserLine" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
points = PackedVector2Array(0, 0, 48, 0)
width = 2.0
default_color = Color(1, 0.180392, 0.180392, 1)

[node name="LaserHitbox" parent="LaserLine" instance=ExtResource("1_ujmhc")]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 2
damage = 3

[node name="LaserCollision" type="CollisionShape2D" parent="LaserLine/LaserHitbox"]
unique_name_in_owner = true
shape = SubResource("SegmentShape2D_1yqjx")
disabled = true

[node name="LaserRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 1)

[node name="LaserSE" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_17kof")
volume_db = -11.848
bus = &"SE"

[node name="HitEffect" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HitParticles" type="GPUParticles2D" parent="HitEffect"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_6bd7p")
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_ex5e7")
texture = ExtResource("4_msahl")
lifetime = 0.3
